[gd_scene load_steps=14 format=3 uid="uid://da51brp0yoopn"]

[ext_resource type="Script" path="res://testing/tilemap/pick_cursor.gd" id="1_0ybd0"]
[ext_resource type="Script" path="res://testing/tilemap/minigame_berry_picking.gd" id="1_myc5h"]
[ext_resource type="Script" path="res://testing/tilemap/berry_spawner.gd" id="1_qkswh"]
[ext_resource type="PackedScene" uid="uid://bfhugv33iryy" path="res://testing/tilemap/berry.tscn" id="2_e3nof"]
[ext_resource type="Texture2D" uid="uid://cteekxuu7k3b7" path="res://testing/tilemap/assets/bramble.png" id="2_hjkkm"]
[ext_resource type="AudioStream" uid="uid://d2tp7eduwhukt" path="res://testing/tilemap/assets/imported/fruit-pick.ogg" id="4_ckkfw"]
[ext_resource type="Script" path="res://testing/tilemap/berry_collector.gd" id="5_8yr6l"]
[ext_resource type="AudioStream" uid="uid://dma2dh72vnppu" path="res://testing/tilemap/assets/imported/fruit-hit.ogg" id="8_0mr20"]
[ext_resource type="Texture2D" uid="uid://tftdy5qvcng4" path="res://testing/tilemap/assets/basket.png" id="9_21roo"]
[ext_resource type="Script" path="res://testing/tilemap/wiggle.gd" id="10_of2gj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kpo8m"]
radius = 15.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_427dp"]
size = Vector2(20, 180)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3f5i2"]

[node name="berry_picker" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(180, 180)
layout_mode = 3
anchors_preset = 0
offset_right = 180.0
offset_bottom = 180.0
script = ExtResource("1_myc5h")
berry_count = 40

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 180.0
offset_bottom = 180.0
texture = ExtResource("2_hjkkm")

[node name="Cursor" type="Area2D" parent="." node_paths=PackedStringArray("audioplayer")]
scale = Vector2(0.5, 0.5)
collision_layer = 0
collision_mask = 1024
script = ExtResource("1_0ybd0")
force_mag = 200.0
audioplayer = NodePath("AudioStreamPlayer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cursor"]
shape = SubResource("CircleShape2D_kpo8m")

[node name="Polygon2D" type="Polygon2D" parent="Cursor"]
color = Color(0.694118, 0.376471, 0.305882, 1)
polygon = PackedVector2Array(4, -15, 13, -8, 15, 3, 9, 13, -6, 15, -14, 6, -15, -5, -8, -13)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Cursor"]
stream = ExtResource("4_ckkfw")
volume_db = -6.0
max_polyphony = 20
bus = &"Overlapping"

[node name="BerrySpawner" type="Node2D" parent="."]
script = ExtResource("1_qkswh")
berry_scene = ExtResource("2_e3nof")

[node name="Middle" type="Node2D" parent="."]
position = Vector2(90, 90)

[node name="LeftWall" type="StaticBody2D" parent="Middle"]
position = Vector2(-100, 0)
collision_layer = 65536
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Middle/LeftWall"]
shape = SubResource("RectangleShape2D_427dp")

[node name="RightWall" type="StaticBody2D" parent="Middle"]
position = Vector2(100, 0)
collision_layer = 65536
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Middle/RightWall"]
shape = SubResource("RectangleShape2D_427dp")

[node name="Bottom" type="Node2D" parent="."]
position = Vector2(90, 180)

[node name="Collector" type="Area2D" parent="Bottom" node_paths=PackedStringArray("audioplayer", "basket")]
collision_layer = 0
collision_mask = 1024
script = ExtResource("5_8yr6l")
audioplayer = NodePath("AudioStreamPlayer")
basket = NodePath("Basket")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom/Collector"]
position = Vector2(0, 100)
scale = Vector2(50, 5)
shape = SubResource("RectangleShape2D_3f5i2")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Bottom/Collector"]
stream = ExtResource("8_0mr20")
volume_db = -6.0
max_polyphony = 20
bus = &"Overlapping"

[node name="Basket" type="Sprite2D" parent="Bottom/Collector"]
position = Vector2(0, -90)
texture = ExtResource("9_21roo")
script = ExtResource("10_of2gj")

[connection signal="minigame_start" from="." to="BerrySpawner" method="_on_spawn_request"]
[connection signal="minigame_start" from="." to="Bottom/Collector" method="_on_berry_picker_minigame_start"]
[connection signal="area_entered" from="Cursor" to="Cursor" method="_on_area_entered"]
[connection signal="body_entered" from="Cursor" to="Cursor" method="_on_body_entered"]
[connection signal="all_collected" from="Bottom/Collector" to="." method="_on_collection_area_all_collected"]
[connection signal="body_entered" from="Bottom/Collector" to="Bottom/Collector" method="_on_body_entered"]
